--- a/src/gui/contentwidget.ui
+++ b/src/gui/contentwidget.ui
@@ -91,6 +91,18 @@
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>52</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>16777215</width>
+           <height>52</height>
+          </size>
+         </property>
          <property name="frameShape">
           <enum>QFrame::StyledPanel</enum>
          </property>
@@ -192,7 +204,7 @@
                 <x>0</x>
                 <y>0</y>
                 <width>223</width>
-                <height>314</height>
+                <height>295</height>
                </rect>
               </property>
              </widget>
